sandbox/output
StringCalculator.java:5: error: ')' expected
        if (param.contains("\n") {
                                ^
1 error
